fix scrollbar zzzzzz

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,12 +1,15 @@
 body {
   position: absolute;
-  overflow: hidden;
   padding: 0;
   margin: 0;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 #ree-overlay {
